--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>Modern Portfolio | Professional Designer & Developer</title>
   <meta name="description" content="Professional portfolio showcasing UI/UX Design, Frontend Development, and Brand Identity services with a focus on elegant digital experiences." />
   <!-- Open Graph / Social Media Meta Tags -->
-  <meta property="og:title" content="Modern Portfolio | Professional Designer & Developer" />
+  <meta property="og:title" content="Portfolyo | Hayrunnisa Uluçay" />
   <meta property="og:description" content="Portfolio showcasing UI/UX Design, Frontend Development, and Brand Identity services with a focus on elegant digital experiences." />
   <meta property="og:type" content="website" />
   <!-- Fonts -->
