--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-  <title>Modern Portfolio | Professional Designer & Developer</title>
+  <title>Portfolyo | Hayrunnisa Uluçay</title>
   <meta name="description" content="Professional portfolio showcasing UI/UX Design, Frontend Development, and Brand Identity services with a focus on elegant digital experiences." />
   <!-- Open Graph / Social Media Meta Tags -->
   <meta property="og:title" content="Portfolyo | Hayrunnisa Uluçay" />
